# code-to-clipboard-for-llms

./: .gitignore  README.md  copy.py  copy.sh  install-linux.sh  install-mac.sh  install-windows.ps1  llmcontext.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
.github/workflows/: auto-release.yml  build-windows.yml  publish.yml  update-homebrew.yml
src/: cli.ts  version.ts
src/config/: builder.ts
src/constants/: defaults.ts  languages.ts
src/core/: analyzer.ts  filter.ts  git.ts  reader.ts  scanner.ts
src/formatters/: json.ts  markdown.ts
src/github/: fetcher.ts  parser.ts
src/interactive/: firstRun.ts  wizard.ts
src/output/: writer.ts
src/types/: index.ts
