[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-to-llm-context"
version = "2.2.3"
description = "A tool to gather project context into a single file for LLMs"
authors = [{name = "Yigit Konur", email = "yigit35@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
keywords = ["llm", "context", "code", "clipboard", "ai", "developer-tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]

dependencies = [
    "pyperclip>=1.8.0",
    "gitignore-parser>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yigitkonur/code-to-clipboard-for-llms"
Repository = "https://github.com/yigitkonur/code-to-clipboard-for-llms"
Issues = "https://github.com/yigitkonur/code-to-clipboard-for-llms/issues"

[project.scripts]
context = "llmcontext:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
]

[tool.setuptools]
py-modules = ["llmcontext"]

[tool.black]
line-length = 88
target-version = ['py36']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true